# msg_gripper_ros2

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  package.xml  pytest.ini  setup.py
config/: default.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/msg_gripper_ros2/local/lib/python3.10/dist-packages/msg_gripper_ros2/: msg_gripper_node.py
install/msg_gripper_ros2/share/ament_index/resource_index/package_run_dependencies/: msg_gripper_ros2
install/msg_gripper_ros2/share/msg_gripper_ros2/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/msg_gripper_ros2/share/msg_gripper_ros2/config/: default.yaml
install/msg_gripper_ros2/share/msg_gripper_ros2/launch/: msg_gripper_launch.py
launch/: msg_gripper_launch.py
log/: latest_build
msg_gripper_ros2/: msg_gripper_node.py
test/: conftest.py  test_hardware.py  test_unit.py
